--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:11.0.0'
     implementation 'com.facebook.android:facebook-login:[8.1)'
 
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
